fixing layout issue with the get quote button

--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -114,6 +114,7 @@
     @extend .group;
     ul {
         margin-bottom: 0;
+        float: left;
     }
     a {
         color: $font-color-secondary;
